--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.html
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.html
@@ -67,18 +67,18 @@
             <div class="acc-card-header">
               <div class="acc-card-link collapsed" data-toggle="collapse" attr.data-target="#{{ exp._id }}">
                 <div class="row m-0 col-12 row_data">
-                  <div class="col-3 ex-title">{{ exp.name }}</div>
+                  <div class="col-3 ex-title">{{exp.name}}</div>
                   <div class="col-3 variants">
                     <div class="variants-block left">
                       <span class="v-name" *ngFor="let vari of exp.variants; let index = index" [style.background-color]="vari.color" [hidden]="index === 3">
-                        <span *ngIf="(index < 2)">{{vari.code }}</span>
-                        <span *ngIf="(index > 1) && (index === 2)">{{exp_index==2?'+ 1 ':'+ 2 '}}</span>
+                        <span *ngIf="(index < 2)">{{vari.code}}</span>
+                        <span *ngIf="(index > 1) && (index >= 2)">{{exp.variants.length==3?'+ 1 ':'+ 2 '}}</span>
                       </span>
                     </div>
                     <div class="variants-block right">
                       <span *ngFor="let vari of exp.variants; let index = index">
                         <span *ngIf="exp.top_leader === vari.code &&exp.state !== 'configured'">
-                        <span class="v-name status" [style.background-color]="vari.color">{{ exp.top_leader }}</span>
+                        <span class="v-name status" [style.background-color]="vari.color">{{exp.top_leader}}</span>
                         <span class="winner" *ngIf="vari.leader"><img src="assets/icons/experiment/leader.svg" alt="leader"></span>
                         <span class="winner" *ngIf="vari.winner">{{"experiments.winner"| translate}}</span></span>
                       </span>
@@ -196,7 +196,7 @@
                     <div class="col-2 title">{{"experiments.search_config"| translate}}</div>
                     <div class="col-1 title">{{"experiments.traffic"| translate}}</div>
                     <div class="col-1 title">{{"experiments.users"| translate}}</div>
-                    <div class="col-1 title">{{"experiments.searches"| translate}}></div>
+                    <div class="col-1 title">{{"experiments.searches"| translate}}</div>
                     <div class="col-1 title">{{"experiments.clicks"| translate}}</div>
                     <div class="col-2 title">{{"experiments.ctr"| translate}}  <span placement="top-center" [ngbTooltip]="ctrTooltip" [container]='"body"' tooltipClass="metrics_tooltips m-0"><img src="assets/icons/overview/Info.svg"></span></div>
                   </div>
@@ -285,11 +285,11 @@
     <div class="modal-body textAlignLeft">
       <div class="info-notifcation" *ngIf="exp_status !== 'configured' && form_type === 'edit'">
         <img src="assets/icons/info-blue.svg" />
-        <span class="title">{{ exp_status | titlecase }} Experiment cannot be edited</span>
+        <span class="title">{{ exp_status | titlecase }} {{"experiments.exp_cannot_edited"| translate}}</span>
       </div>
       <div class="row ml-0 mr-0 mb-3 col-12 p-0 pr-30">
         <div class="kr-sg-input-text col-8 pl-pr-5">
-          <div class="label-text">Experiment Name</div>
+          <div class="label-text">{{"experiments.exp_name"| translate}}</div>
           <input type="text" autocomplete="off" id="enterName"placeholder="Enter Experiment Name" class="input-text"  (blur)="inputChanged('enterName')" (change)="inputChanged('enterName')"
             [(ngModel)]="experimentObj.name" [disabled]="exp_status !== 'configured' && form_type === 'edit'" [ngClass]="{
               disable_edit: exp_status !== 'configured' && form_type === 'edit'
@@ -300,7 +300,7 @@
 
       <div class="row ml-0 mr-0 mb-3 col-12 p-0 pr-30" *ngFor="let vari of variantsArray; let varIndex = index">
         <div class="kr-sg-input-text col-4 pl-pr-5 ifvariant"> 
-          <div class="label-text">Variant Name</div>
+          <div class="label-text">{{"experiments.var_name"| translate}}</div>
           <input type="text" autocomplete="off" #varName placeholder="Enter Variant Name" class="input-text"  id ="variantName{{varIndex}}"  (change)="inputChanged('variantName', varIndex)"
             [(ngModel)]="vari.name" (blur)="fetchVariant(varIndex, varName.value, 'name'); inputChanged('variantName', varIndex)"
             [disabled]="exp_status !== 'configured' && form_type === 'edit'" [ngClass]="{
@@ -312,7 +312,7 @@
             <img id="infoWarning{{varIndex}}" src="assets/icons/warning_escalation.svg" style="display: none;" height="12" width="12" />
         </div>
         <div class="kr-sg-dropdowns col-4 pl-pr-5">
-          <div class="label-text">Index</div>
+          <div class="label-text">{{"experiments.exp_index"| translate}}</div>
           <div class="dropdown dropdown-open">
             <button class="dropdown-toggle dropdown-input" data-toggle="dropdown" id="indexPipelineName{{varIndex}}"     
               [disabled]="exp_status !== 'configured' && form_type === 'edit'" [ngStyle]='{"background-color":(exp_status !== "configured" && form_type === "edit")?"#EFF0F1":"#ffffff","color":(vari.indexPipelineName==undefined)||(exp_status !== "configured" && form_type === "edit")?"#9aa0a6":"#202124","border-color":(exp_status !== "configured" && form_type === "edit")?"#f3f3f4":"#BDC1C6"}'>
@@ -330,7 +330,7 @@
           </div>
         </div>
         <div class="kr-sg-dropdowns col-4 pl-pr-5">
-          <div class="label-text">Search Configuration</div>
+          <div class="label-text">{{"experiments.search_configuration"| translate}}</div>
           <div class="dropdown dropdown-open">
             <button class="dropdown-toggle dropdown-input" data-toggle="dropdown" id="queryPipelineName{{varIndex}}"  
               [disabled]="(exp_status !== 'configured' && form_type === 'edit')||vari.indexPipelineName==undefined" [ngStyle]='{"background-color":(exp_status !== "configured" && form_type === "edit")||vari.indexPipelineName==undefined?"#EFF0F1":"#ffffff","color":(vari.indexPipelineName==undefined)||(exp_status !== "configured" && form_type === "edit")?"#9aa0a6":"#202124","border-color":(exp_status !== "configured" && form_type === "edit")?"#f3f3f4":"#BDC1C6"}'>
@@ -355,12 +355,12 @@
 
       <div class="mb-3 variant-add" (click)="addVarient()" *ngIf="variantsArray.length < 4"
         [hidden]="exp_status !== 'configured' && form_type === 'edit'">
-        <img src="assets/icons/add_blue.svg" />Add Variant
+        <img src="assets/icons/add_blue.svg" />{{"experiments.add_variant"| translate}}
       </div>
 
       <div class="trafic-sec" >
         <div class="pl-pr-5 slider-sec">
-          <div class="label-text">Traffic</div>
+          <div class="label-text">{{"experiments.traffic"| translate}}</div>
           <nouislider *ngIf="showSlider" #sliderref [config]="someRangeconfig" [(ngModel)]="someRange" (slide)="sliderChanged()"></nouislider>
         </div>
         <div class="percentage-sec">
@@ -377,7 +377,7 @@
 
       <div class="duration-sec">
         <div class="kr-sg-input-text">
-          <div class="label-text">Duration</div>
+          <div class="label-text">{{"experiments.exp_duration"| translate}}</div>
           <input type="number" autocomplete="off" class="input-text text-center" min="30" max="90" (keyup)="checkDuration(experimentObj?.duration.days)"
             [(ngModel)]="experimentObj?.duration.days" [disabled]="exp_status !== 'configured' && form_type === 'edit'" [ngStyle]='{"background-color":(exp_status !== "configured" && form_type === "edit")?"#EFF0F1":"#ffffff","border-color":(exp_status !== "configured" && form_type === "edit")?"#f3f3f4":"#BDC1C6"}' />
           <img src="assets/icons/minus.svg" class="minus" [hidden]="exp_status !== 'configured' && form_type === 'edit'"
@@ -395,7 +395,7 @@
                   : 90
             " />
         </div>
-        Days
+        {{"experiments.exp_days"| translate}}
       </div>
     </div>
   </perfect-scrollbar>
@@ -405,10 +405,10 @@
    !experimentObj.name ||
           (exp_status !== 'configured' && form_type === 'edit') || (variantsArray.length < 2) || (experimentObj?.duration.days < 1)
         " -->
-     Add
+      {{"experiments.save_btn"| translate}}
     </button>
     <button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeModalPopup()">
-      Cancel
+      {{"experiments.cancel_btn"| translate}}
     </button>
   </div>
 </kr-modal>
