--- a/findly-builder/src/app/components/business-rules/business-rules.component.scss
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.scss
@@ -163,7 +163,7 @@
                 font-weight: 500;
                 font-size: 12px;
                 line-height: 14px;
-                text-transform: uppercase;
+                // text-transform: uppercase;
                 padding: 0 10px;
                 img {
                     position: relative;
