defect sheet stpwords,credentials,channels,faq

--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -89,7 +89,7 @@
                 <div class="label-text mb-1">{{"credentials.jwt_algorithm" | translate}} </div>
                 <div class="kr-sg-dropdowns" ngbDropdown [placement]="'bottom'">                                        
                     <div class="dropdown dropdown-open">
-                        <button class="dropdown-toggle dropdown-input" ngbDropdownToggle> {{credntial.awt}}</button>                                            
+                        <button class="dropdown-toggle dropdown-input" > {{credntial.awt}}</button>                                            
                         <ul class="dropdown-menu content-menu faq-filter-add mw-100 w-100 p-0" ngbDropdownMenu>
                             <li (click)="jwtAuth('RS256')"><a>{{"credentials.RS256" | translate}}</a></li>
                             <li (click)="jwtAuth('HS256')"><a>{{"credentials.HS256" | translate}}</a></li>            
@@ -137,7 +137,7 @@
                 <div class="label-text mb-1">{{"credentials.jwt_algorithm" | translate}} </div>
                 <div class="kr-sg-dropdowns" ngbDropdown [placement]="'bottom'">                                        
                     <div class="dropdown dropdown-open">
-                        <button class="dropdown-toggle dropdown-input" ngbDropdownToggle> {{credntial.awt}}</button>                                            
+                        <button class="dropdown-toggle dropdown-input" > {{credntial.awt}}</button>                                            
                         <ul class="dropdown-menu content-menu faq-filter-add mw-100 w-100 p-0" ngbDropdownMenu>
                             <li (click)="jwtAuth('RS256')"><a>{{"credentials.RS256" | translate}}</a></li>
                             <li (click)="jwtAuth('HS256')"><a>{{"credentials.HS256" | translate}}</a></li>            
