--- a/findly-builder/src/app/components/invoices/invoices.component.html
+++ b/findly-builder/src/app/components/invoices/invoices.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="header-sec">
         <app-useronboarding-journey [componentType]='componentType'></app-useronboarding-journey>
-        <div class="title">Invoices</div>
+        <div class="title">{{"invoices.invoices" | translate}}</div>
         <!-- <div class="d-flex align-items-center">
             <div class="kr-sg-input-search" [ngClass]="{'d-none': !showSearch}">
                 <input type="text" placeholder="Search" class="input-search" [ngClass]="{'pl-33':!searchInvoice,'pl-2':searchInvoice}" autocomplete="off" [(ngModel)]="searchInvoice" (focusout)="showSearch= !showSearch" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
@@ -30,22 +30,22 @@
 
     <ng-container *ngIf="invoices.length && !loading">
         <div class="plan-type">
-            <div class="current-plan">Current Plan</div>
+            <div class="current-plan">{{"invoices.current_plan" | translate}}</div>
             <div class="type">{{current_plan_name}}</div>
         </div>
         <perfect-scrollbar class="scroll-invoice-content if-pagination">
             <div class="invoice-table-data">
                 <div class="invoice-table-header row col-12">
-                    <div class="title col-2">INVOICE ID</div>
-                    <div class="title col-3">BILLING period</div>
-                    <div class="title col-2">INVOICE AMOUNT</div>
-                    <div class="title col-2">SUBSCRIPTION</div>
+                    <div class="title col-2">{{"invoices.invoices_id_caps" | translate}}</div>
+                    <div class="title col-3">{{"invoices.BILLING_period" | translate}}</div>
+                    <div class="title col-2">{{"invoices.invoice_amount_caps" | translate}}</div>
+                    <div class="title col-2">{{"invoices.subscription_caps" | translate}}</div>
                     <div class="title col-3 col_ d-flex align-items-center" (click)="sortBy('invoiceCreatedDate')">
                         <span class="d-flex align-items-center flex-column mr-1">
                             <img  [ngClass]="getSortIconVisibility('invoiceCreatedDate', 'down')" src="assets/icons/caretDown.svg" class="ml-1 sortImg downArrow">
                             <img  [ngClass]="getSortIconVisibility('invoiceCreatedDate', 'up')" src="assets/icons/caretDown.svg" class="ml-1 sortImg upArrow">
                           </span>
-                        INVOICE DATE</div>
+                          {{"invoices.invoice_date_caps" | translate}}</div>
                 </div>
                 <div class="invoice-table-body row col-12" *ngFor="let invoice of invoices | fieldsFilter: [ searchInvoice, '_id']">
                     <div class="title col-2">{{invoice._id}}</div>
