--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1317,6 +1317,7 @@ div.divBlockEmptylastChild:first-child {
         box-shadow: 0px -2px 4px rgba(32, 33, 36, 0.2);
         display: block !important;
         text-align: right;
+        box-shadow: 0 0 5px rgb(0 0 0 / 10%);
         button{
             margin:0 0px 0 10px !important;
         }
