--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -96,7 +96,7 @@
                             </div>                                
                             </ng-container>
                         </perfect-scrollbar>
-                        <div class="pagination mt-4" *ngIf='totalRecord'>
+                        <div class="pagination mt-4" *ngIf='totalRecord > limitpage'>
                             <app-record-pagination [totalRecord]='totalRecord' [limitpage]='limitpage' (pageChanged)="paginate($event)"></app-record-pagination>
                         </div>
                     </div>
