--- a/findly-builder/src/app/components/scheduler/scheduler.component.scss
+++ b/findly-builder/src/app/components/scheduler/scheduler.component.scss
@@ -82,6 +82,7 @@
             padding: 10px 30px;
             background: #FFFFFF;
             border-radius: 4px;
+            box-shadow: 0 0 5px rgb(0 0 0 / 10%);
             .kr-sg-button-primary{
                 height: 34px;
                 margin: 0 15px 0 0;
