In Usage log page, when there are more logs pagination is not working. When we click on > (single)arrow it is not going to the next page issue fixed

--- a/findly-builder/src/app/components/usage-log/usage-log.component.html
+++ b/findly-builder/src/app/components/usage-log/usage-log.component.html
@@ -30,7 +30,7 @@
             <div class="empty-text">Usage log will appear once the app is active!!</div>
         </div>
     </ng-container>
-    <ng-container *ngIf="usageLogs.length && !loading">
+    <ng-container *ngIf="usageLogs.length && !loadingLogs">
         <div class="plan-type">
             <div class="current-plan">Current Plan</div>
             <div class="type">Free</div>
