--- a/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.html
+++ b/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.html
@@ -29,13 +29,13 @@
             </div>
           </div>
       </button>
-      <ul class="dropdown-menu content-menu" ngbDropdownMenu *ngIf="checklistCount>0&&checklistCount!=6">
+      <!-- <ul class="dropdown-menu content-menu" ngbDropdownMenu *ngIf="checklistCount>0&&checklistCount!=6">
        <div class="configured-dropdown-content" *ngIf="prevStep!='undefined'">
         <span class="title-info">{{prevStep&&prevStep.name}}</span>
         <span class="state-type">Completed</span>
       </div>
         <button class="kr-sg-button-primary btn_lg mt-3" (click)="gotoRoutes(nextStep.path)">{{nextStep&&nextStep.name}} Now</button>
-      </ul>
+      </ul> -->
     </div>
   </div>
 
