--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -158,10 +158,13 @@
           </div>       
       </div>
       <div class="table-data-content col-6">
-        <div class="content-sec active_experments"  *ngIf="activities.length===0">       
-          <div class="img-block center-image" (click) = "openExp()"><img src="assets/icons/overview/no-activites.svg"></div>
+        <div class="content-sec active_experments"  *ngIf="!showActivity">
+          <div class="title-sec d-flex justify-content-between">
+            <div class="title">Activities</div> 
+          </div>       
+          <div class="img-block center-image"><img src="assets/icons/overview/no-activites.svg"></div>
         </div>
-        <div class="content-sec" *ngIf="activities.length>0">
+        <div class="content-sec" *ngIf="showActivity">
           <div class="title-sec d-flex justify-content-between">
             <div class="title">Activities</div> 
             <div class="create_new_link">Show all activities</div>
