--- a/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.scss
+++ b/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.scss
@@ -140,21 +140,21 @@
             }
         }
     }
-    &.show {
-      .dropdown-open {
-        .dropdown-input{
-            border-radius: 4px 4px 0px 0px;
-            box-shadow: 0px 20px 40px rgb(32 33 36 / 20%);
-        }
-      }
-    }
+    // &.show {
+    //   .dropdown-open {
+    //     .dropdown-input{
+    //         border-radius: 4px 4px 0px 0px;
+    //         box-shadow: 0px 20px 40px rgb(32 33 36 / 20%);
+    //     }
+    //   }
+    // }
     .dropdown-open {
         .dropdown-input{
             padding: 0 12px 0 17px;
             cursor:default;
-            &:hover{
-                border: solid 1px #1372ff;
-            }
+            // &:hover{
+            //     border: solid 1px #1372ff;
+            // }
             &::before{
                 display: none;
             }
