--- a/findly-builder/src/app/shared/kr-modal/kr-modal.component.scss
+++ b/findly-builder/src/app/shared/kr-modal/kr-modal.component.scss
@@ -228,6 +228,55 @@
             }
         }
     }
+    &.creating-new-app-modal{
+        .modal-dialog{
+            width: 625px;
+            height: 395px;
+            max-width: 100%;
+            .label-text{
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 15px;
+                margin-bottom: 8px;
+            }
+            .modal-content{
+                text-align: left;
+                height: 100%;
+                .modal-header{
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    background: #FFFFFF;
+                    box-shadow: 0px 0px 5px rgb(0 0 0 / 20%);
+                    border-radius: 4px;
+                    padding: 10px 30px;
+                    height: 54px;
+                    .modal-title{
+                        color: #202124;
+                        font-weight: 500;
+                        font-size: 18px;
+                        line-height: 22px;
+                    }
+                    .close_modal{
+                        cursor: pointer;
+                    }
+                }
+                .modal-body{
+                    padding: 25px 30px;
+                    .kr-sg-input-text{
+                        margin-bottom: 23px;
+                    }
+                }
+                .modal-footer{
+                    background: #FFFFFF;
+                    box-shadow: 0px -2px 4px rgb(32 33 36 / 20%);
+                    border-radius: 4px;
+                    height: 56px;
+                    padding: 0 26px;                
+                }
+            }
+        }
+    }
     /*--Regular Modal Basic Styles Starts Here--*/
     .modal-dialog{
         display: inline-block;
